rollout/sof-app02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sof-app02
  namespace: sof-app02
spec:
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: sof-app02
