rollout/sof-app02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sof-app02
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sof-app02.pt.playtech.corp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sof-app02
            port:
              number: 3000
